修复了关于xywh格式的iou错误，添加了对于需要anchor转换的函数

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,8 +12,6 @@ find_package(TensorRT REQUIRED)
 
 find_package(OpenCV REQUIRED)
 
-find_package(FMT REQUIRED)
-
 include_directories(${Eigen_INCLUDE_DIRS})
 
 include_directories(${CUDA_INCLUDE_DIRS})
@@ -24,5 +22,5 @@ include_directories(${OpenCV_INCLUDE_DIRS})
 
 add_executable(TRTFrame main.cpp TRTFrame.cpp ${TensorRT_SOURCE})
 
-target_link_libraries(TRTFrame ${TensorRT_LIBS} ${OpenCV_LIBS} ${CUDA_LIBRARIES} fmt::fmt nvonnxparser cuda pthread) 
+target_link_libraries(TRTFrame ${TensorRT_LIBS} ${OpenCV_LIBS} ${CUDA_LIBRARIES} nvonnxparser cuda pthread) 
 
